CMAKE_MINIMUM_REQUIRED(VERSION 3.1 FATAL_ERROR)
PROJECT(SERRE)

SET(CMAKE_CXX_STANDARD 11)

# pthread see https://stackoverflow.com/a/29871891
SET(THREADS_PREFER_PTHREAD_FLAG ON)
FIND_PACKAGE(Threads REQUIRED)


INCLUDE(CTest)
ENABLE_TESTING()
FIND_PACKAGE(GTest REQUIRED)
INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})


ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(bin)

#ADD_SUBDIRECTORY(test)
